 2011-01-12 00:15  asfernandes 
   M src/jrd/cmp.cpp
Backported fix for CORE-3306 - Invariant sub-query is treated as variant thus causing multiple invokations of a nested stored procedure

 2011-01-11 15:55  dimitr 
   M src/jrd/cmp.cpp
Better fix for CORE-3211. It avoids a crash due to a not initialized rse_relation[] array which is used inside ignore_dbkey().

 2011-01-11 07:48  alexpeshkoff 
   M doc/README.fb_shutdown
fixed to make it match actual code

 2011-01-07 11:24  dimitr 
   M src/jrd/evl.cpp
   M src/jrd/opt.cpp
Fixed CORE-3302: Distinct aggregates return wrong (duplicated) data.

 2011-01-04 12:49  dimitr 
   M src/jrd/dpm.epp
Fixed my stupid mistake.

 2011-01-02 22:15  hvlad 
   M src/jrd/exe.cpp
More conservative fix for CORE-3282 : EXECUTE STATEMENT parses the SQL text using wrong charset.
Convert into attachment charset query text only

 2010-12-28 12:01  dimitr 
   M src/jrd/dpm.epp
CORE-3295: Estimate the actual record compression ratio in the optimizer.

 2010-12-27 22:03  hvlad 
   M src/jrd/svc.cpp
Fixed typo at my recent commit for CORE-3266

 2010-12-23 11:10  hvlad 
   M src/jrd/exe.cpp
Fixed bug CORE-3282 : EXECUTE STATEMENT parses the SQL text using wrong charset

 2010-12-20 07:05  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/opt.cpp
Fixed CORE-3283: Bad plan with using LEFT OUTER JOIN in sub-select.

 2010-12-17 09:54  hvlad 
   M src/jrd/svc.cpp
   M src/jrd/svc.h
   M src/jrd/trace/TraceService.cpp
Better fix for bug CORE-3266 : Race condition between async service detach request and running user trace service

 2010-12-17 05:40  robocop 
   M doc/WhatsNew
Misc.

 2010-12-16 00:14  asfernandes 
   M src/jrd/SysFunction.cpp
Backported fix for CORE-3277 - Wrong result for RIGHT(UTF8 varchar)

 2010-12-12 19:17  hvlad 
   M src/remote/inet.cpp
   M src/remote/remote.cpp
   M src/remote/remote.h
   M src/remote/server.cpp
Fixed bug CORE-3119 : 100% CPU USAGE with Unilimited Loop & Index corrupted
